# kv

./: .dockerignore  Cargo.toml  Containerfile  Readme.md  rustfmt.toml
src/: appstate.rs  entry.rs  error.rs  lib.rs  main.rs  query.rs
systemd/: kv.service
